base/production/portfolio/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-web
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: portfolio
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-websecure
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: portfolio
          port: 80
  tls:
    secretName: production-portfolio-tls
